--- a/todo.txt
+++ b/todo.txt
@@ -11,6 +11,9 @@ ASSEMBLY
 C/C++/QT/MEMORY/THREADS
 SPRING MVC, THYMELEAF
 
+REFERALKA
+FAKTURA
+EMAIL MODULE
 
 REFERALKA -- WATT PENEZENKA SOZDAET REFERAL SYLKU, DOBAVIM EE V DB,
 POTOM KOGDA 4EL OTPRAVLYAJET ZAPROS 4ECK JESTLI SYLKA V DB ESTLI NET TO OTKAZ,
